--- a/updates/version.yaml
+++ b/updates/version.yaml
@@ -2,3 +2,5 @@
     - 'Initialize plugin.'
 1.0.2:
     - 'Added ApiTracker middleware. Moved serverSide component logic to classes/TrackerHelper.php'
+1.0.3:
+    - 'Updated tracker to version 3.0 and added consent mode'
